--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "description": "easy to use pdf viewer written in vanilla typescript",
   "main": "index.js",
-  "author": "Zaw Lin Tun (w99910)",/,
+  "author": "Zaw Lin Tun (w99910)",
   "license": "MIT",
   "type": "module",
   "dependencies": {
@@ -16,6 +16,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
+    "path": "^0.12.7",
     "postcss": "^8.4.27",
     "tailwindcss": "^3.3.3",
     "vite": "^4.4.9"
